<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "#1C1A1A"
    tools:context=".EditDetails">

    <TextView
        android:id="@+id/editdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Edit Your Details"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scrolledit"/>

    <ScrollView
        android:id="@+id/scrolledit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/editBottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editdetails">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editweight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:text="Enter Your Current Weight (kg)"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/editrectangle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editdetails" />

            <NumberPicker
                android:id="@+id/editrectangle1"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_marginStart="60dp"
                android:background="@drawable/edittext_border"
                app:layout_constraintBottom_toTopOf="@id/editgoalweight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editweight" />

            <TextView
                android:id="@+id/editgoalweight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:text="Enter Your Goal Weight (kg)"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/editrectangle4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editrectangle1" />

            <NumberPicker
                android:id="@+id/editrectangle4"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_marginStart="60dp"
                android:background="@drawable/edittext_border"
                app:layout_constraintBottom_toTopOf="@id/editheight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editgoalweight" />

            <TextView
                android:id="@+id/editheight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="Enter Your Current Height (cm)"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/editrectangle2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editrectangle4" />

            <NumberPicker
                android:id="@+id/editrectangle2"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_marginStart="60dp"
                android:background="@drawable/edittext_border"
                app:layout_constraintBottom_toTopOf="@id/editage"
                app:layout_constraintTop_toBottomOf="@id/editheight" />

            <TextView
                android:id="@+id/editage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/age"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/editrectangle3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editrectangle2" />

            <NumberPicker
                android:id="@+id/editrectangle3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/edittext_border"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toTopOf="@id/editgender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editage" />

            <TextView
                android:id="@+id/editgender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/gender"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/editradioGroupGender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editrectangle3" />

            <RadioGroup
                android:id="@+id/editradioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintBottom_toTopOf="@id/editgoal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editgender">

                <RadioButton
                    android:id="@+id/editradioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/editradioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/editgoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="Enter Your Fitness Goal"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/editradioGroupGoal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editdetails" />

            <RadioGroup
                android:id="@+id/editradioGroupGoal"
                android:layout_width="370dp"
                android:layout_height="144dp"
                android:layout_marginStart="60dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/editfit_level"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editgoal">

                <RadioButton
                    android:id="@+id/editradioButtonLoss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Weight Loss"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/editradioButtonGain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Weight Gain"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/editradioButtonEndurance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Maintain Weight"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/editfit_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="Enter Your Fitness Level"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/editradioGroupExercise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editradioGroupGoal" />

            <RadioGroup
                android:id="@+id/editradioGroupExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/editfreq_exercise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editfit_level">

                <RadioButton
                    android:id="@+id/editradioButtonBeginner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Beginner"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/editradioButtonIntermediate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Intermediate"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/editradioButtonExpert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Advanced"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/editfreq_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="Enter Preferred Days Of Exercise Per Week"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/editrectangle5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editradioGroupExercise" />

            <NumberPicker
                android:id="@+id/editrectangle5"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_marginStart="60dp"
                android:background="@drawable/edittext_border"
                app:layout_constraintBottom_toTopOf="@id/confirmEditButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editfreq_exercise" />

            <Button
                android:id="@+id/confirmEditButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="Confirm Details"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editBottomNavigationView" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/editBottomNavigationView"
        app:labelVisibilityMode="labeled"
        app:itemTextColor="@color/bottom_navigation_text_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_menu"
        app:itemIconSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>